David Whitmer Test

--- a/presentations/David Whitmer.html
+++ b/presentations/David Whitmer.html
@@ -3,7 +3,7 @@
   <head>
     <title>My presentation</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Eren Bilen" />
+    <meta name="author" content="David Whitmer" />
     <script src="libs/header-attrs-2.30/header-attrs.js"></script>
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
@@ -18,7 +18,7 @@ class: center, middle, inverse, title-slide
 ## ⚔<br/>with xaringan
 ]
 .author[
-### Eren Bilen
+### David Whitmer
 ]
 .institute[
 ### RStudio, PBC
